<resources>
    <string name="app_name">Conversor de Temperatura</string>
    <string name="temperature">Temperatura:</string>
    <string name="input_error">Erro de Entrada</string>
    <string name="hint_temperature">Digite a Temperatura:</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="msgConversion">Realizada a Conversão de </string>
    <string name="msgConversion2">para </string>
    <string name="error_popup_notify">Não foi Possível Realizar a Conversão de Temperatura com os Dados Informados</string>
    <string name="converter">Converter</string>
    <string name="convert_from">Converter de:</string>
    <string name="convert_to">Converter para: </string>

    <string-array name="spinner_scales">
        <item>@string/celsius</item>
        <item>@string/fahrenheit</item>
        <item>@string/kelvin</item>
    </string-array>

</resources>