<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textview_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <EditText
        android:id="@+id/edittext_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_temperature"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_temperature"/>

    <TextView
        android:id="@+id/textview_convert_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_from"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_temperature" />

    <Spinner
        android:id="@+id/spinner_convert_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/textview_convert_from"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_convert_from"
        tools:layout_editor_absoluteY="8dp" />

    <TextView
        android:id="@+id/textview_convert_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_to"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_convert_from" />

    <Spinner
        android:id="@+id/spinner_convert_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/textview_convert_to"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_convert_to"
        tools:layout_editor_absoluteY="180dp" />

    <Button
        android:id="@+id/btn_converter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/converter"
        android:textAllCaps="true"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal1" />

    <TextView
        android:id="@+id/textview_result_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/output"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview_text_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textColor="@color/output"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal2" />

</androidx.constraintlayout.widget.ConstraintLayout>